--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "tsc",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
-    "test": "jest",
-    "lint": "eslint src/**/*.ts",
-    "format": "prettier --write src/**/*.ts"
+    "install-all": "npm install && npm run build",
+    "validate": "bash validate-mcp.sh",
+    "quick-start": "npm run validate && npm start"
   },
   "keywords": [
     "mcp",
@@ -38,16 +38,19 @@
     "tsx": "^4.19.0",
     "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.0.0",
     "natural": "^6.10.4"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
+    "@types/discord.js": "^14.16.1",
+    "@types/natural": "^5.1.5",
     "eslint": "^9.8.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
