Fix: Remove @types/discord.js (included in discord.js) and problematic natural dependency

--- a/package.json
+++ b/package.json
@@ -1,56 +1,1 @@
-{
-  "name": "stealth-anticheatx-mcp-server",
-  "version": "3.0.0",
-  "description": "MCP Server Avanzado para Stealth-AntiCheatX - Análisis en Tiempo Real de Cheating",
-  "main": "dist/index.js",
-  "type": "module",
-  "scripts": {
-    "build": "tsc",
-    "dev": "tsx src/index.ts",
-    "start": "node dist/index.js",
-    "install-all": "npm install && npm run build",
-    "validate": "bash validate-mcp.sh",
-    "quick-start": "npm run validate && npm start"
-  },
-  "keywords": [
-    "mcp",
-    "model-context-protocol", 
-    "anti-cheat",
-    "cheating-analysis",
-    "discord-bot",
-    "minimax",
-    "gpt4",
-    "stealth-anticheatx"
-  ],
-  "author": "xpe.nettt",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/xpe-hub/stealth-anticheatx-mcp-server"
-  },
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.6.0",
-    "discord.js": "^14.15.3",
-    "openai": "^4.67.3",
-    "sqlite3": "^5.1.7",
-    "axios": "^1.7.2",
-    "typescript": "^5.6.2",
-    "tsx": "^4.19.0",
-    "dotenv": "^16.4.5",
-    "fs-extra": "^11.2.0",
-    "cheerio": "^1.0.0",
-    "natural": "^6.10.4"
-  },
-  "devDependencies": {
-    "@types/node": "^22.5.4",
-    "@types/discord.js": "^14.16.1",
-    "@types/natural": "^5.1.5",
-    "eslint": "^9.8.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.3.3"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
-  }
-}
+{"name": "stealth-anticheatx-mcp-server", "version": "3.0.0", "description": "MCP Server Avanzado para Stealth-AntiCheatX - Análisis en Tiempo Real de Cheating", "main": "dist/index.js", "type": "module", "scripts": {"build": "tsc", "dev": "tsx src/index.ts", "start": "node dist/index.js", "install-all": "npm install && npm run build", "validate": "bash validate-mcp.sh", "quick-start": "npm run validate && npm start"}, "keywords": ["mcp", "model-context-protocol", "anti-cheat", "cheating-analysis", "discord-bot", "minimax", "gpt4", "stealth-anticheatx"], "author": "xpe.nettt", "license": "MIT", "repository": {"type": "git", "url": "https://github.com/xpe-hub/stealth-anticheatx-mcp-server"}, "dependencies": {"@modelcontextprotocol/sdk": "^0.6.0", "discord.js": "^14.15.3", "openai": "^4.67.3", "sqlite3": "^5.1.7", "axios": "^1.7.2", "typescript": "^5.6.2", "tsx": "^4.19.0", "dotenv": "^16.4.5", "fs-extra": "^11.2.0", "cheerio": "^1.0.0"}, "devDependencies": {"@types/node": "^22.5.4", "@types/cheerio": "^0.22.35", "eslint": "^9.8.0", "jest": "^29.7.0", "prettier": "^3.3.3"}, "engines": {"node": ">=18.0.0", "npm": ">=8.0.0"}}
